@@ -165,6 +165,10 @@ function bad_url($url) {
 }
 </PRE></UL>
 
+<P>Another method is to use the <CODE>escapeshellarg()</CODE> function
+provided with PHP 4.0.3 and higher to generate a quoted shell argument
+for HTMLDOC.</P>
+
 <P>To make a "portal" script, add the following code to complete the
 example:</P>
 
