@@ -403,6 +403,14 @@ or disable printer commands.
 <P>Printer commands are only available with Level 2 and 3 output and
 may not work with some printers.
 
+<H3>Include Xerox Job Comments</H3>
+
+<P>The <VAR>Include Xerox Job Comments</VAR> check box controls
+whether or not the output files contain Xerox job comments.
+Click in the check box to enable or disable the job comments.
+
+<P>Job comments are available with all levels of PostScript output.
+
 <P ALIGN=CENTER><IMG SRC="htmldoc-fig78.png">
 <BR>Figure 7-8 - The PDF Tab
 
